# graphics-programming-2021

./: .gitignore  CMakeLists.txt  README.md
assignments/: CMakeLists.txt  assignment_3-rendering_pipeline.html  voronoi.html  weather_effects.html
assignments/voronoi/: CMakeLists.txt  main.cpp  shader.h
assignments/voronoi/shaders/: color.frag  distance.frag  distance_color.frag  shader.vert
exercises/: exercise_1.html  exercise_2.html  exercise_3.html  exercise_4.html  exercise_5.html  exercise_6.html
exercises/exercise_1/: CMakeLists.txt
exercises/exercise_1/exercise_1_3/: main.cpp
exercises/exercise_1/exercise_1_4/: main.cpp
exercises/exercise_10/exercise_10/: main.cpp
exercises/exercise_10/exercise_10/renderer/: frame_buffer.h  rt_renderer.h  rt_types.h
exercises/exercise_10_solutions/exercise_10_sol/: main.cpp
exercises/exercise_10_solutions/exercise_10_sol/renderer/: rt_renderer.h  rt_types.h
exercises/exercise_11/exercise_11_1_and_11_3/: main.cpp
exercises/exercise_11/exercise_11_1_and_11_3/shaders/: shader.frag
exercises/exercise_11/exercise_11_4_and_11_5/: mesh.h
exercises/exercise_11/exercise_11_4_and_11_5/shaders/: shader.frag  shader.vert
exercises/exercise_11_solutions/exercise_11_1_and_11_3_sol/: CMakeLists.txt
exercises/exercise_11_solutions/exercise_11_1_and_11_3_sol/shaders/: shader.frag  shader.vert
exercises/exercise_11_solutions/exercise_11_4_and_11_5_sol/: main.cpp
exercises/exercise_11_solutions/exercise_11_4_and_11_5_sol/shaders/: shader.frag  shader.vert
exercises/exercise_12/: CMakeLists.txt
exercises/exercise_12/exercise_12_1_to_12_3/: model.h  skybox.h
exercises/exercise_12/exercise_12_1_to_12_3/shaders/: shader.frag  shader.vert  skybox.vert
exercises/exercise_12/exercise_12_4_to_12_6/: main.cpp
exercises/exercise_12/exercise_12_4_to_12_6/shaders/: deferred_light_box.frag  deferred_shading.frag  deferred_shading.vert  forward_shading.frag  g_buffer.frag  g_buffer.vert
exercises/exercise_12_solutions/exercise_12_1_to_12_3_sol/: main.cpp
exercises/exercise_12_solutions/exercise_12_1_to_12_3_sol/shaders/: shader.frag  shader.vert
exercises/exercise_12_solutions/exercise_12_4_to_12_6_sol/: CMakeLists.txt  main.cpp
exercises/exercise_12_solutions/exercise_12_4_to_12_6_sol/shaders/: deferred_light_box.vert  deferred_shading.frag  forward_shading.vert
exercises/exercise_1_solutions/exercise_1_1_and_1_2_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_3_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_4_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_5_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_6_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_7_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_8_sol/: main.cpp
exercises/exercise_2/exercise_2_1/: main.cpp  shader_s.h
exercises/exercise_2/exercise_2_2_to_2_7/: main.cpp
exercises/exercise_2/exercise_2_2_to_2_7/shaders/: shader.frag  shader.vert
exercises/exercise_2_solutions/exercise_2_1_sol/: CMakeLists.txt  main.cpp  shader_s.h
exercises/exercise_2_solutions/exercise_2_2_to_2_7_sol/: main.cpp
exercises/exercise_2_solutions/exercise_2_2_to_2_7_sol/shaders/: shader.frag  shader.vert
exercises/exercise_3/exercise_3/: CMakeLists.txt  main.cpp  plane_model.h
exercises/exercise_3/exercise_3/shaders/: shader.vert
exercises/exercise_3_solutions/exercise_3_sol/: main.cpp  plane_model.h  shader_s.h
exercises/exercise_3_solutions/exercise_3_sol/shaders/: shader.vert
exercises/exercise_4/exercise_4_1_and_4_2/: main.cpp  primitives.h
exercises/exercise_4/exercise_4_3_and_4_4/: main.cpp  shader.h
exercises/exercise_4_solutions/exercise_4_1_and_4_2_sol/: main.cpp
exercises/exercise_4_solutions/exercise_4_3_and_4_4_sol/: main.cpp  plane_model.h  primitives.h
exercises/exercise_5/exercise_5_1/: glmutils.h  main.cpp  plane_model.h
exercises/exercise_5/exercise_5_2/: main.cpp  primitives.h
exercises/exercise_5/exercise_5_2/shaders/: shader.vert
exercises/exercise_5_solutions/: CMakeLists.txt
exercises/exercise_5_solutions/exercise_5_1_sol/: glmutils.cpp  main.cpp  primitives.h
exercises/exercise_5_solutions/exercise_5_2_sol/: main.cpp
exercises/exercise_5_solutions/exercise_5_2_sol/shaders/: shader.frag
exercises/exercise_6/exercise_6_1/: CMakeLists.txt  CustomFrameBuffer.cpp  main.cpp
exercises/exercise_6/exercise_6_1/rasterizer/: edgerasterizer.cpp  trianglerasterizer.cpp
exercises/exercise_6_solutions/exercise_6_1_sol/: CustomFrameBuffer.cpp  CustomFrameBuffer.h  main.cpp
exercises/exercise_6_solutions/exercise_6_1_sol/rasterizer/: edgerasterizer.cpp  edgerasterizer.h  linerasterizer.h  trianglerasterizer.h
exercises/exercise_7/exercise_7/: CMakeLists.txt  main.cpp  primitives.h
exercises/exercise_7/exercise_7/renderer/: srl_line_renderer.h  srl_point_renderer.h  srl_renderer.h  srl_triangle_renderer.h  srl_types.h
exercises/exercise_7_solutions/exercise_7_sol/: main.cpp
exercises/exercise_7_solutions/exercise_7_sol/rasterizer/: linerasterizer.cpp  trianglerasterizer.cpp
exercises/exercise_8/exercise_8_1_to_8_6/: main.cpp
exercises/exercise_8_solutions/exercise_8_1_to_8_6_sol/: CMakeLists.txt  main.cpp  mesh.h  model.h
exercises/exercise_8_solutions/exercise_8_1_to_8_6_sol/shaders/: gouraud_shading.vert  phong_shading.frag  phong_shading.vert
exercises/exercise_9/exercise_9/: CMakeLists.txt  CMakeListsold.txt  main.cpp
exercises/exercise_9/exercise_9/renderer/: rt_renderer.h  rt_types.h
exercises/exercise_9/exercise_9/shaders/: car_shader.frag  floor_shader.frag  floor_shader.vert
exercises/exercise_9_solutions/: CMakeLists.txt
exercises/exercise_9_solutions/exercise_9_sol/: main.cpp
(+8 files in other folders)
